# service/controllers.py
@@ -1,4 +1,4 @@
-from flask import g, request
+from flask import g, request, Response
 from flask_restful import Resource
 from openapi_core.shortcuts import RequestValidator
 from openapi_core.wrappers.flask import FlaskOpenAPIRequest
@@ -6,6 +6,7 @@ from openapi_core.wrappers.flask import FlaskOpenAPIRequest
 from common import utils, errors
 
 from service.models import db, Client
+from service.ldap import list_tenant_users, get_tenant_user
 
 # get the logger instance -
 from common.logs import get_logger
@@ -17,7 +18,6 @@ class ClientsResource(Resource):
     Work with OAuth client objects
     """
 
-    # @swag_from("resources/ldaps/list.yml")
     def get(self):
         clients = Client.query.filter_by(tenant_id=g.tenant_id, username=g.username)
         return utils.ok(result=[cl.serialize for cl in clients], msg="Clients retrieved successfully.")
@@ -73,3 +73,48 @@ class TokensResource(Resource):
         return validated_body
         # return utils.ok(result=client.serialize, msg="Client created successfully.")
 
+
+class ProfilesResource(Resource):
+    """
+    Work with profiles.
+    """
+
+    def get(self):
+        logger.debug('top of GET /profiles')
+        # get the tenant id - we use the x_tapis_tenant if that is set (from some service account); otherwise, we use
+        # the tenant_id assoicated with the JWT.
+        tenant_id = getattr(g, 'x_tapis_tenant', None)
+        if not tenant_id:
+            logger.debug("didn't find x_tapis_tenant; using tenant id in token.")
+            tenant_id = g.tenant_id
+        logger.debug(f"using tenant_id {tenant_id}")
+        try:
+            limit = int(request.args.get('limit'))
+        except:
+            limit = None
+        offset = None
+        try:
+            offset = int(request.args.get('offset'))
+            # b64_offset = request.args.get('offset')
+            # logger.debug(f'b64_offset: {b64_offset}')
+            # if b64_offset:
+            #     offset = base64.b64decode(b64_offset)
+            #     logger.debug(f'offset: {offset}')
+        except Exception as e:
+            logger.debug(f'get exception parsing offset; exception: {e}; setting offset to none.')
+            offset = 0
+        users, offset = list_tenant_users(tenant_id=tenant_id, limit=limit, offset=offset)
+        resp = utils.ok(result=[u.serialize for u in users], msg="Profiles retrieved successfully.")
+        resp.headers['X-Tapis-Offset'] = offset
+        return resp
+
+
+class ProfileResource(Resource):
+    def get(self, username):
+        logger.debug(f'top of GET /profiles/{username}')
+        tenant_id = getattr(g, 'x_tapis_tenant', None)
+        if not tenant_id:
+            logger.debug("didn't find x_tapis_tenant; using tenant id in token.")
+            tenant_id = g.tenant_id
+        user = get_tenant_user(tenant_id=tenant_id, username=username)
+        return utils.ok(result=user.serialize, msg="User profile retrieved successfully.")
